@@ -208,6 +208,10 @@ $self->{texts} = {
   'Add custom data export query' => 'Benutzerdefinierte Datenexport-Abfrage erfassen',
   'Add custom variable'         => 'Benutzerdefinierte Variable erfassen',
   'Add department'              => 'Abteilung hinzufügen',
+  'Add document for AP transactions' => 'Dokumente für Kreditorenbuchung hinzufügen (benötigt DMS)',
+  'Add document for AR transactions' => 'Dokumente für Debitorenbuchung hinzufügen (benötigt DMS)',
+  'Add document for GL transactions' => 'Dokumente für Dialogbuchung hinzufügen (benötigt DMS)',
+  'Add document for Purchase invoices' => 'Dokumente für Einkaufsrechnung hinzufügen (benötigt DMS)',
   'Add empty line (csv_import)' => 'Leere Zeile einfügen',
   'Add function block'          => 'Funktionsblock hinzufügen',
   'Add greeting'                => 'Anrede hinzufügen',
@@ -3067,6 +3071,7 @@ $self->{texts} = {
   'Show delivery value report'  => 'Lieferwertbericht anzeigen',
   'Show details'                => 'Details anzeigen',
   'Show details and reports of parts, services, assemblies' => 'Details und Berichte von Waren, Dienstleistungen und Erzeugnissen anzeigen',
+  'Show document tab after posting?' => 'Buchungsmaske nicht verlassen',
   'Show documents in WebDAV'    => 'Dokumente im WebDAV anzeigen',
   'Show documents in file storage' => 'Dokumente im Dateimanagement anzeigen',
   'Show fields used for the best before date?' => 'Felder zur Eingabe des Mindesthaltbarkeitsdatums anzeigen?',
