@@ -208,6 +208,10 @@ $self->{texts} = {
   'Add custom data export query' => '',
   'Add custom variable'         => '',
   'Add department'              => '',
+  'Add document for AP transactions' => '',
+  'Add document for AR transactions' => '',
+  'Add document for GL transactions' => '',
+  'Add document for Purchase invoices' => '',
   'Add empty line (csv_import)' => '',
   'Add function block'          => '',
   'Add greeting'                => '',
@@ -3067,6 +3071,7 @@ $self->{texts} = {
   'Show delivery value report'  => '',
   'Show details'                => '',
   'Show details and reports of parts, services, assemblies' => '',
+  'Show document tab after posting?' => '',
   'Show documents in WebDAV'    => '',
   'Show documents in file storage' => '',
   'Show fields used for the best before date?' => '',
