@@ -38,22 +38,22 @@
   <tr> </tr>
 
   <tr>
-   <td align="right">[% LxERP.t8(' Add document for Purchase invoices') %]</td>
+   <td align="right">[% LxERP.t8('Add document for Purchase invoices') %]</td>
    <td>[% L.yes_no_tag('defaults.ir_add_doc', SELF.posting_options, value_key = 'value', title_key = 'title', default = SELF.defaults.ir_add_doc) %]</td>
    <td>[% LxERP.t8('Show document tab after posting?') %]</td>
   </tr>
   <tr>
-   <td align="right">[% LxERP.t8(' Add document for AR transactions') %]</td>
+   <td align="right">[% LxERP.t8('Add document for AR transactions') %]</td>
    <td>[% L.yes_no_tag('defaults.ar_add_doc', SELF.posting_options, value_key = 'value', title_key = 'title', default = SELF.defaults.ar_add_doc) %]</td>
    <td>[% LxERP.t8('Show document tab after posting?') %]</td>
   </tr>
   <tr>
-   <td align="right">[% LxERP.t8(' Add document for AP transactions') %]</td>
+   <td align="right">[% LxERP.t8('Add document for AP transactions') %]</td>
    <td>[% L.yes_no_tag('defaults.ap_add_doc', SELF.posting_options, value_key = 'value', title_key = 'title', default = SELF.defaults.ap_add_doc) %]</td>
    <td>[% LxERP.t8('Show document tab after posting?') %]</td>
   </tr>
   <tr>
-   <td align="right">[% LxERP.t8(' Add document for GL transactions') %]</td>
+   <td align="right">[% LxERP.t8('Add document for GL transactions') %]</td>
    <td>[% L.yes_no_tag('defaults.gl_add_doc', SELF.posting_options, value_key = 'value', title_key = 'title', default = SELF.defaults.gl_add_doc) %]</td>
    <td>[% LxERP.t8('Show document tab after posting?') %]</td>
   </tr>
